fix(core): replace List.of/Map.of with Java 8 compatible equivalents in JsonConstraints
List.of() and Map.of() require Java 9+; replaced with Arrays.asList() and
LinkedHashMap construction to maintain Java 8 compatibility.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>